[gd_scene load_steps=3 format=3 uid="uid://cqn86e3ked1fc"]

[ext_resource type="Script" uid="uid://y2cd1d1sn1b6" path="res://noms.gd" id="1_4i1ke"]

[sub_resource type="SystemFont" id="SystemFont_4i1ke"]

[node name="noms" type="Node2D"]
script = ExtResource("1_4i1ke")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Pregunta" type="Label" parent="."]
offset_left = 16.0
offset_top = 120.0
offset_right = 350.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 20
text = "JUGADOR 1, introdueix el teu nom:"

[node name="LineEdit" type="LineEdit" parent="Pregunta"]
layout_mode = 0
offset_left = 95.0
offset_top = 64.0
offset_right = 239.0
offset_bottom = 136.0

[node name="Pregunta4" type="Label" parent="."]
offset_left = 192.0
offset_top = 312.0
offset_right = 526.0
offset_bottom = 376.0
theme_override_font_sizes/font_size = 20
text = "JUGADOR 4, introdueix el teu nom:"

[node name="LineEdit4" type="LineEdit" parent="Pregunta4"]
layout_mode = 0
offset_left = 95.0
offset_top = 64.0
offset_right = 239.0
offset_bottom = 136.0

[node name="Pregunta2" type="Label" parent="."]
offset_left = 424.0
offset_top = 120.0
offset_right = 758.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 20
text = "JUGADOR 2, introdueix el teu nom:"

[node name="LineEdit2" type="LineEdit" parent="Pregunta2"]
layout_mode = 0
offset_left = 95.0
offset_top = 64.0
offset_right = 239.0
offset_bottom = 136.0

[node name="Pregunta3" type="Label" parent="."]
offset_left = 808.0
offset_top = 120.0
offset_right = 1142.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 20
text = "JUGADOR 3, introdueix el teu nom:"

[node name="LineEdit3" type="LineEdit" parent="Pregunta3"]
layout_mode = 0
offset_left = 95.0
offset_top = 64.0
offset_right = 239.0
offset_bottom = 136.0

[node name="Pregunta5" type="Label" parent="."]
offset_left = 632.0
offset_top = 312.0
offset_right = 966.0
offset_bottom = 376.0
theme_override_font_sizes/font_size = 20
text = "JUGADOR 5, introdueix el teu nom:"

[node name="LineEdit5" type="LineEdit" parent="Pregunta5"]
layout_mode = 0
offset_left = 95.0
offset_top = 64.0
offset_right = 239.0
offset_bottom = 136.0

[node name="Benvinguda" type="RichTextLabel" parent="."]
offset_left = 16.0
offset_top = 464.0
offset_right = 1104.0
offset_bottom = 656.0
theme_override_fonts/normal_font = SubResource("SystemFont_4i1ke")
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 20
text = "Benvinguts a la partida"
scroll_active = false
horizontal_alignment = 1
